// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Restart Interval" button should reinitialise whole routine 1`] = `
<div>
  <div>
    <h3
      data-testid="interval-name"
    >
      fitness workout 1
    </h3>
    <h1
      data-testid="step-name"
    >
      press-ups
    </h1>
    <h1
      data-testid="time-remaining"
    >
      20
    </h1>
    <button>
      Start
    </button>
    <button>
      Stop
    </button>
  </div>
</div>
`;

exports[`"Restart Step" button should reinitialise current step 1`] = `
<div>
  <div>
    <h3
      data-testid="interval-name"
    >
      fitness workout 1
    </h3>
    <h1
      data-testid="step-name"
    >
      Rest
    </h1>
    <h1
      data-testid="time-remaining"
    >
      10
    </h1>
    <button>
      Start
    </button>
    <button>
      Stop
    </button>
  </div>
</div>
`;

exports[`Interval should change state current step and time remaining when launched 1`] = `
<div>
  <div>
    <h3
      data-testid="interval-name"
    >
      fitness workout 1
    </h3>
    <h1
      data-testid="step-name"
    >
      press-ups
    </h1>
    <h1
      data-testid="time-remaining"
    >
      20
    </h1>
    <button>
      Start
    </button>
    <button>
      Stop
    </button>
  </div>
</div>
`;

exports[`Should stop the interval after all of the steps have completed 1`] = `
<div>
  <div>
    <h3
      data-testid="interval-name"
    >
      fitness workout 1
    </h3>
    <h1
      data-testid="step-name"
    >
      Rest
    </h1>
    <h1
      data-testid="time-remaining"
    >
      0
    </h1>
    <button>
      Start
    </button>
    <button>
      Stop
    </button>
    <button>
      Restart Step
    </button>
    <button>
      Restart Interval
    </button>
  </div>
</div>
`;

exports[`StartIntervalPage should render correctly 1`] = `
<div>
  <div>
    <h3
      data-testid="interval-name"
    >
      fitness workout 1
    </h3>
    <h1
      data-testid="step-name"
    />
    <h1
      data-testid="time-remaining"
    />
    <button>
      Start
    </button>
    <button>
      Stop
    </button>
  </div>
</div>
`;

exports[`Stopping the timer should stop the time remaining from decreasing 1`] = `
<div>
  <div>
    <h3
      data-testid="interval-name"
    >
      fitness workout 1
    </h3>
    <h1
      data-testid="step-name"
    >
      press-ups
    </h1>
    <h1
      data-testid="time-remaining"
    >
      18
    </h1>
    <button>
      Start
    </button>
    <button>
      Stop
    </button>
    <button>
      Restart Step
    </button>
    <button>
      Restart Interval
    </button>
  </div>
</div>
`;

exports[`Time remaining of interval step should reduce by 1 second for each second the interval runs for 1`] = `
<div>
  <div>
    <h3
      data-testid="interval-name"
    >
      fitness workout 1
    </h3>
    <h1
      data-testid="step-name"
    >
      press-ups
    </h1>
    <h1
      data-testid="time-remaining"
    >
      19
    </h1>
    <button>
      Start
    </button>
    <button>
      Stop
    </button>
  </div>
</div>
`;

exports[`When the timer reaches zero, the next second should set the interval step name and the time remaining to that of the next step 1`] = `
<div>
  <div>
    <h3
      data-testid="interval-name"
    >
      fitness workout 1
    </h3>
    <h1
      data-testid="step-name"
    >
      Rest
    </h1>
    <h1
      data-testid="time-remaining"
    >
      10
    </h1>
    <button>
      Start
    </button>
    <button>
      Stop
    </button>
  </div>
</div>
`;

exports[`interval should resume from current time remaining when start button is clicked after being stopped 1`] = `
<div>
  <div>
    <h3
      data-testid="interval-name"
    >
      fitness workout 1
    </h3>
    <h1
      data-testid="step-name"
    >
      press-ups
    </h1>
    <h1
      data-testid="time-remaining"
    >
      16
    </h1>
    <button>
      Start
    </button>
    <button>
      Stop
    </button>
  </div>
</div>
`;
